locust-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: monitoring
spec:
  replicas: 3
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
      - name: locust-worker
        image: locustio/locust
        args:
          - "--worker"
          - "--master-host=locust-master"
